--- a/profile_of_user/templates/basic.html
+++ b/profile_of_user/templates/basic.html
@@ -59,11 +59,8 @@
   {% endblock %}
 
 <p class="text-muted navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
-  WebPres.org <a href="https://bigwebx.com/" class="text-reset">Powered by bigweb</a>.
+  WebPres.org <a href="https://ronyman.com/" class="text-reset">Powered by ronyman.com</a>.
 </p>
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   {% block js %} {% endblock %}
 
 
