--- a/profile_of_user/templates/basic.html
+++ b/profile_of_user/templates/basic.html
@@ -7,6 +7,13 @@
 
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
+{% block head-meta %}
+  	<meta charset="utf-8">
+  	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
+    <meta name="keywords" content="Forum WebPres , Opensource.">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% endblock %}
 <!doctype html>
 <html lang="en">
   <head>
