--- a/profile_of_user/templates/donate.html
+++ b/profile_of_user/templates/donate.html
@@ -1,5 +1,12 @@
 {% load static %}
 <!---Donated Area--->
+{% block head-meta %}
+  	<meta charset="utf-8">
+  	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
+    <meta name="keywords" content="Forum WebPres , Donate.">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% endblock %}
 <div class="container">
   <h4>Donated.</h4>
 <br>
