--- a/profile_of_user/templates/discussion.html
+++ b/profile_of_user/templates/discussion.html
@@ -4,7 +4,14 @@
 
 {% block css %}
 {% endblock %}
-{% block body %} 
+{% block body %}
+{% block head-meta %}
+  	<meta charset="utf-8">
+  	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
+    <meta name="keywords" content="Forum WebPres , Discussion.">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% endblock %}
 <br>
 <div class="container-fluid mt-5">
     <div class="row">
