--- a/profile_of_user/templates/login.html
+++ b/profile_of_user/templates/login.html
@@ -99,6 +99,13 @@ input[type="submit"]:active {
   transition: 0.1s ease;
 }
 {% endblock %}
+{% block head-meta %}
+  	<meta charset="utf-8">
+  	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
+    <meta name="keywords" content="Forum WebPres , Login.">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% endblock %}
 
 {% block body %}
 <br>
