--- a/profile_of_user/templates/basic.html
+++ b/profile_of_user/templates/basic.html
@@ -1,7 +1,7 @@
-{# Load the tag library #}
+{ Load the tag library}
 {% load bootstrap5 %}
 
-{# Load CSS and JavaScript #}
+{ Load CSS and JavaScript }
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
