--- a/user/templates/basic.html
+++ b/user/templates/basic.html
@@ -5,7 +5,7 @@
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
-{# Display django.contrib.messages as Bootstrap alerts #}
+{ Display django.contrib.messages as Bootstrap alerts }
 {% bootstrap_messages %}
 {% block head-meta %}
   	<meta charset="utf-8">
