--- a/Templates/basic.html
+++ b/Templates/basic.html
@@ -13,6 +13,10 @@
       <style>
           {% block css %} {% endblock %}
     </style>
+ <link rel="shortcut icon" type="image/png" href="{% static 'brand/favicon.ico' %}"/>
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
