--- a/user/templates/basic.html
+++ b/user/templates/basic.html
@@ -7,13 +7,7 @@
 
 { Display django.contrib.messages as Bootstrap alerts }
 {% bootstrap_messages %}
-{% block head-meta %}
-  	<meta charset="utf-8">
-  	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
-    <meta name="keywords" content="Forum WebPres , Opensource.">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% endblock %}
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -21,6 +15,10 @@
       <style>
           {% block css %} {% endblock %}
     </style>
+       <link rel="shortcut icon" type="image/png" href="{% static 'brand/favicon.ico' %}"/>
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
