--- a/Templates/basic.html
+++ b/Templates/basic.html
@@ -1,22 +1,17 @@
-{# Load the tag library #}
-{% load bootstrap5 %}
-{% load static %}
 
-{# Load CSS and JavaScript #}
+{% load static %}
+{% load bootstrap5 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
+{% csrf_token %}
 
-{# Display django.contrib.messages as Bootstrap alerts #}
-{% bootstrap_messages %}
-
-<title>{% block title %} {% endblock %}</title>
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>{% block title %}Forum WebPres {% endblock %}</title>
       <style>
-          {% block css %} {% endblock %}
-    </style>
- <link rel="shortcut icon" type="image/png" href="{% static 'brand/favicon.ico' %}"/>
-  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+      {% block css %}{% load bootstrap5 %}{% endblock %}
+       </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -66,11 +61,4 @@
 <br>
 </body>
 {% block body %} {% endblock %}
-<footer> {% include "sponsored.html" %} </footer>
-<footer> {% include "donate.html" %} </footer>
-<footer> {% include "footer.html" %} </footer>
-<footer> {% include "powered-by.html" %} </footer>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
