--- a/apps/user/templates/forums/register.html
+++ b/apps/user/templates/forums/register.html
@@ -1,28 +1,33 @@
-{% extends 'layouts/basic.html' %}
-{% load static %}
-{% load bootstrap5 %}
+{% extends "layouts/base.html" %}
 
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-
-{% bootstrap_messages %}
-<br>
-<br>
-
+{% block head-meta %}
+  	<meta charset="utf-8">
+  	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
+    <meta name="keywords" content="Register Accounts , Forum WebPres.">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% endblock %}
 {% block body %}
+<br>
+<br>
+<br>
+
 <div id="login-box">
     <div class="items">
       <h1>Register</h1>
         <form action="/register/" method="post"> {% csrf_token %}
-   
+
       <input type="text" name="username" placeholder="Username" />
       <input type="email" name="email" placeholder="E-mail" />
       <input type="text" name="first_name" placeholder="First Name" />
       <input type="text" name="last_name" placeholder="Last Name" />
       <input type="password" name="password" placeholder="Password" />
       <input type="password" name="confirm_password" placeholder="Confirm your password" />
-      
+
       <input type="submit" name="signup_submit" value="Register" />
-    </div>   
+    </div>
   </div>
-{% endblock %}
+{% include "legal/copyrights.html" %}
+  {% endblock %}
+
+
