--- a/apps/home/templates/accounts/register.html
+++ b/apps/home/templates/accounts/register.html
@@ -1,11 +1,10 @@
 {% extends "layouts/base.html" %}
 {% block content %}
-{% load i18n %}
-{% load static %}
+{# Load the tag library #}
 {% block head-meta %}
   	<meta charset="utf-8">
   	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
-    <meta name="keywords" content="WebPres.org , Register.">
+    <meta name="keywords" content="Forum WebPres , Register.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% endblock %}
