--- a/apps/home/templates/accounts/login.html
+++ b/apps/home/templates/accounts/login.html
@@ -2,7 +2,7 @@
 {% block head-meta %}
   	<meta charset="utf-8">
   	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
-    <meta name="keywords" content="WebPres , Login.">
+    <meta name="keywords" content="Forum WebPres , Login.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% endblock %}
