--- a/apps/user/templates/registration/login.html
+++ b/apps/user/templates/registration/login.html
@@ -21,6 +21,7 @@
     <button class="btn btn-primary" type="submit">Login</button>
   </form>
   <p class="text-center">Don't have an account? <a href="/register">Create an account</a>.</p>
+    <a href="{% url 'password_reset' %}"><i>Forgot Password?</i></a>
 </div>
 
 {% include "legal/copyrights.html" %}
