--- a/apps/user/templates/forums/forum.html
+++ b/apps/user/templates/forums/forum.html
@@ -6,7 +6,7 @@
 {% block head-meta %}
   	<meta charset="utf-8">
   	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
-    <meta name="keywords" content="WebPres , Forum for webpres issu.">
+    <meta name="keywords" content="WebPres , Forum for webpres issue.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% endblock %}
