--- a/apps/home/templates/accounts/register.html
+++ b/apps/home/templates/accounts/register.html
@@ -1,15 +1,14 @@
 {% extends "layouts/base.html" %}
-{% block content %}
-{# Load the tag library #}
+
 {% block head-meta %}
   	<meta charset="utf-8">
   	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
-    <meta name="keywords" content="Forum WebPres , Register.">
+    <meta name="keywords" content="Register Accounts , WebPres Forums.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% endblock %}
 
-<br>
+{% block content %}
 
 {% load crispy_forms_tags %}
 
@@ -25,4 +24,4 @@
 </div>
 
 {% include "legal/copyrights.html" %}
-  {% endblock %}
+{% endblock %}
