--- a/apps/user/templates/registration/register.html
+++ b/apps/user/templates/registration/register.html
@@ -3,10 +3,11 @@
 {% block head-meta %}
   	<meta charset="utf-8">
   	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
-    <meta name="keywords" content="Register Accounts , WebPres.">
+    <meta name="keywords" content="Register Accounts , WebPres Forums.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% endblock %}
+    
 {% block content %}
 
 {% load crispy_forms_tags %}
