--- a/apps/forum_core/templates/forums/forum.html
+++ b/apps/forum_core/templates/forums/forum.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load bootstrap5 %}
 {% block content %}
+
 {% block head-meta %}
   	<meta charset="utf-8">
   	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
@@ -15,54 +16,39 @@
     <h3 class="display-4">Welcome to WebPres Forum</h3>
     <p class="lead">Post and Read your WebPres's issue with hesitated </p>
     <hr class="my-4">
-    <p>.</p>
-      <button class=" btn btn-outline-dark btn-sm " data-target="#questions" data-toggle="modal" role="button">Add Question</button>
     </div>
+
+{% buttons submit='Post A Question' button_type="submit" button_class="btn btn-outline-dark btn-sm " %}
+
     {% for post in posts %}
-    <div class="container-fluid mt-10">
-      <div class="row">
-          <div class="col-md-12">
-              <div class="card mb-4">
-                  <div class="card-header">
-                      <div class="media flex-wrap w-100 align-items-center"> <img src="/media/{{post.image}}"
-                              class="d-block ui-w-40 rounded-circle" alt="">
-                          <div class="media-body ml-3"> <a href="/discussion/{{post.id}}" data-abc="true">{{post.user1}}</a>
-                          </div>
-                          <div class="text-muted small ml-3">
-                            <div class="px-4 pt-3">{{post.timestamp}} </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="card-body">
-                      <p>{{post.post_content}}</p>
-                  </div>
-                  <div class="card-footer d-flex flex-wrap justify-content-between align-items-center px-0 pt-0 pb-3">
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
+
+
   {% endfor %}
 
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="questions" tabindex="-1" role="dialog" aria-labelledby="PostaQuest" aria-hidden="true">
+<div class="modal fade" id="questions" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="PostaQuest"></h5>
+          <h5 class="modal-title" id="exampleModalLabel"></h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-          <form action="/" method="POST"> {% csrf_token %}
+          {% if user.is_authenticated %}
+         <div class="modal-body">
+          <form action="/" method="POST">
+              {% csrf_token %}
           <div class="form-group">
-            <label for="PostaQuestText">Post Your Question Here</label>
+            <label for="exampleFormControlTextarea1">Post Your Question Here</label>
             <textarea class="form-control" id="content" name="content" rows="3"></textarea>
           </div>
         </div>
+        {% else %}
+        <h3>Please Login to post</h3>
+        {% endif %}
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <button type="submit" class="btn btn-primary">Post</button>
@@ -70,7 +56,7 @@
       </div>
     </div>
   </div>
-
+{% endbuttons %}
 
 {% block js %}
 <script>
