--- a/apps/forum_core/templates/registration/register.html
+++ b/apps/forum_core/templates/registration/register.html
@@ -1,5 +1,6 @@
 {% extends "layouts/base.html" %}
 {% load bootstrap5 %}
+{% load crispy_forms_tags %}
 {% block head-meta %}
   	<meta charset="utf-8">
   	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
@@ -8,17 +9,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% endblock %}
 
-{% load crispy_forms_tags %}
+
 
 {% block content %}
 <!--Register-->
 <div class="container py-5">
 	<h1>Register</h1>
-	<form method="POST">
-		{% csrf_token %}
-		{{ register_form|crispy }}
-		<button class="btn btn-primary" type="submit">Register</button>
-	</form>
+	<form role="form" method="post">
+
+        {% csrf_token %}
+		{{ form|crispy }}
+        {% buttons submit='Register Account' %}{% endbuttons %}
+    </form>
 	<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
 </div>
 
