--- a/apps/forum_core/templates/profile/profile.html
+++ b/apps/forum_core/templates/profile/profile.html
@@ -10,14 +10,6 @@
 {% block profileactive %} active {% endblock profileactive %}
 
 {% block content %}
-{% for message in messages %}
-<div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-    <strong>Message : </strong> {{ message }}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-</div>
-{% endfor %}
 <div class="container">
     <div class="row">
         <div class="col-lg-12 col-lg-offset-0">
@@ -37,8 +29,7 @@
                                     Email: <strong class="float-right">{{request.user.email}}</strong>
                                 </li>
                                 <li class="list-group-item">
-                                    <form action="/myprofile/" enctype="multipart/form-data" method="POST">
-                                        {% csrf_token %}
+                                    <form action="/myprofile/" enctype="multipart/form-data" method="POST">{% csrf_token %}
                                         {{ form.as_p }}
                                         <button type="submit">Upload</button>
                                         Profile Photo: <strong class="float-right"> <img
