--- a/apps/forum_core/templates/registration/register.html
+++ b/apps/forum_core/templates/registration/register.html
@@ -1,6 +1,7 @@
 {% extends "layouts/base.html" %}
 {% load bootstrap5 %}
 {% load crispy_forms_tags %}
+
 {% block head-meta %}
   	<meta charset="utf-8">
   	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
@@ -9,18 +10,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% endblock %}
 
-
-
+{% block title %}Sign up{% endblock title%}
 {% block content %}
-<!--Register-->
-<div class="container py-5">
-	<h1>Register</h1>
-	<form role="form" method="post">
+{% for message in messages  %}
+<div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+      <strong>Message : </strong> {{ message }}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+{% endfor %}
+<div class="container my-4 bg pb-5">
+    <div class="row justify-content-center ">
+        <div class="col-6">
+            <div class="card">
+                <div class="card-body">
+                    <h3>Create Account</h3>
+					{% csrf_token %}
+                    <form method="post" action='/register/'>
+                        <div class="form-group">
+                            <label for="username">Username</label>
+                            <input type="text" class="form-control" id="username" placeholder="Enter your Name"
+                                name="username" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="first_name">First Name</label>
+                            <input type="text" class="form-control" id="first_name" placeholder="Enter your First Name"
+                                name="first_name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="last_name">Last Name</label>
+                            <input type="text" class="form-control" id="last_name" placeholder="Enter your Last Name"
+                                name="last_name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Your Email</label>
+                            <input type="email" class="form-control" id="email" placeholder="Enter your Email"
+                                name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Choose a password</label>
+                            <input type="password" class="form-control" id="password" placeholder="Choose a password"
+                                name="password" required>
+                        </div>
 
-        {% csrf_token %}
-		{{ form|crispy }}
-        {% buttons submit='Register Account' %}{% endbuttons %}
-    </form>
+
+                        <div class="form-group">
+                            <label for="confirm_password">Confirm password</label>
+                            <input type="confirm_password" class="form-control" id="confirm_password"
+                                placeholder="Retype your password" name="confirm_password" required>
+                        </div>
+						{% bootstrap_button "SignUp" button_type="submit" name="signup_submit" value="Register" button_class="btn btn-outline-dark" %}
+
+                </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
 	<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
 </div>
 
