--- a/Templates/admin/base_site.html
+++ b/Templates/admin/base_site.html
@@ -1,4 +1,4 @@
-{% extends "/admin/base.html" %}
+{% extends "admin/base.html" %}
 {% load static %}
 
 {% block head-meta %}
@@ -25,6 +25,6 @@
 
 
 {% block footer %}
-{% include "/admin/footer.html" %}
+{% include "admin/footer.html" %}
 {% endblock %}
 
