--- a/apps/forum_core/templates/forums/forum.html
+++ b/apps/forum_core/templates/forums/forum.html
@@ -1,6 +1,8 @@
 {% extends "layouts/base.html" %}
 {% load static %}
 {% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 {% block content %}
 
 {% block head-meta %}
