--- a/apps/forum_core/templates/registration/login.html
+++ b/apps/forum_core/templates/registration/login.html
@@ -1,5 +1,8 @@
 {% extends "layouts/base.html" %}
 {% block head-meta %}
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
   	<meta charset="utf-8">
   	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
     <meta name="keywords" content="Login Accounts ,Forum WebPres.">
@@ -10,6 +13,14 @@
 {% load bootstrap5 %}
 {% bootstrap_css %}
 {% block content %}
+{% for message in messages  %}
+<div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+      <strong>Message : </strong> {{ message }}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+{% endfor %}
 <br>
 <br>
 <div class="container my-4 bg pb-5">
@@ -28,6 +39,7 @@
     <p>Please login to see this page.</p>
     {% endif %}
 {% endif %}
+
             <form role="form" method="post" >
                 {% csrf_token %}
                 <br>
