--- a/apps/forum_core/templates/registration/register.html
+++ b/apps/forum_core/templates/registration/register.html
@@ -1,5 +1,7 @@
 {% extends "layouts/base.html" %}
 {% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 {% load crispy_forms_tags %}
 
 {% block head-meta %}
@@ -29,50 +31,58 @@
 
                     <form method="post" action='/register/'>
                         <div class="form-group">
-                            <label for="username">Username</label>
+
+                            <label for="username"></label>
                             <input type="text" class="form-control" id="username" placeholder="Enter your Name"
                                 name="username" required>
                         </div>
                         <div class="form-group">
-                            <label for="first_name">First Name</label>
+                            <label for="first_name"></label>
                             <input type="text" class="form-control" id="first_name" placeholder="Enter your First Name"
                                 name="first_name" required>
                         </div>
                         <div class="form-group">
-                            <label for="last_name">Last Name</label>
+                            <label for="last_name"></label>
                             <input type="text" class="form-control" id="last_name" placeholder="Enter your Last Name"
                                 name="last_name" required>
                         </div>
                         <div class="form-group">
-                            <label for="email">Your Email</label>
+                            <label for="email"></label>
                             <input type="email" class="form-control" id="email" placeholder="Enter your Email"
                                 name="email" required>
                         </div>
                         <div class="form-group">
-                            <label for="password">Choose a password</label>
+                            <label for="password"></label>
                             <input type="password" class="form-control" id="password" placeholder="Choose a password"
                                 name="password" required>
                         </div>
 						{% csrf_token %}
 
                         <div class="form-group">
-                            <label for="confirm_password">Confirm password</label>
+                            <label for="confirm_password"></label>
                             <input type="confirm_password" class="form-control" id="confirm_password"
                                 placeholder="Retype your password" name="confirm_password" required>
-                        </div>
+                        </div><br>
 						{% bootstrap_button "SignUp" button_type="submit" name="signup_submit" value="Register" button_class="btn btn-outline-dark" %}
+                        <p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
 
                 </div>
                 </form>
+
+                {% bootstrap_label content %}
+<p class="fs-6">Noted:</p>
+                <p class="fs-6">"Username must be under 15 characters."</p>
+                  <p class="fs-6">"Username must contain only letters and numbers."</p>
+
             </div>
         </div>
     </div>
 </div>
+
 </div>
 
-	<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
-</div>
 
+</div>
 
 {% include "legal/copyrights.html" %}
 {% endblock %}
