--- a/apps/forum_core/templates/registration/login.html
+++ b/apps/forum_core/templates/registration/login.html
@@ -5,7 +5,7 @@
 {% bootstrap_javascript %}
   	<meta charset="utf-8">
   	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
-    <meta name="keywords" content="Login Accounts ,Forum WebPres.">
+    <meta name="keywords" content="Login Accounts ,Forum WebPres.Discuss and Talk all about webpres.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% endblock %}
