--- a/apps/forum_core/templates/layouts/base.html
+++ b/apps/forum_core/templates/layouts/base.html
@@ -43,7 +43,7 @@
         <a class="nav-link text-white" href="https://docs.webpres.org/">Docs</a>
       </li>
           <li class="nav-item">
-        <a class="nav-link text-white" href="http://www.webpres.org/">WebPres Site</a>
+        <a class="nav-link text-white" href="https://www.webpres.org/">WebPres Site</a>
       </li>
 
         <ul class="nav justify-content-end">
