--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -26,9 +26,9 @@
                                 <div class="form-row">
                                     <div class="col-md-10 offset-md-1">
                                     <div class="form-group">
-                                      <label class="small mb-1" for="id_email">Email</label>
+                                      <label class="small mb-1" for="email">Email</label>
                                         <input type="email" name="email"  class="form-control"
-                                               autocomplete="email" maxlength="254" required id="id_email"
+                                               autocomplete="email" maxlength="254" required id="email"
                                                placeholder="Enter email">
                                     </div>
                                 </div>
@@ -45,7 +45,7 @@
                         </div>
                         <div class="card-footer text-center">
                             <div class="small">
-                                <a href="{% url 'users-register' %}">Create A New Account</a><br><br>
+
                                 <a href="{% url 'login' %}">Back To Login</a><br>
                             </div>
                         </div>
